--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@grpc/grpc-js": "^1.5.10",
+    "@grpc/proto-loader": "^0.6.9",
     "express": "^4.17.3"
   }
 }
