--- a/client/nginx/nginx.conf
+++ b/client/nginx/nginx.conf
@@ -9,11 +9,17 @@ server {
 
     location /api {
         proxy_pass http://web_app;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
         proxy_redirect pff;
     }
 
     location / {
         root /usr/share/nginx/html/front/;
         index index.html;
+        try_files   $uri $uri/ /index.html;
     }
 }
