--- a/deployments/stan-gee/Chart.yaml
+++ b/deployments/stan-gee/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: deployments
-description: A Helm chart for Kubernetes
+description: A Helm chart for Stan-Gee service
 
 # A chart can be either an 'application' or a 'library' chart.
 #
