--- a/deployments/stan-gee/values.yaml
+++ b/deployments/stan-gee/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: nginx
+  repository: # image repository in here
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
@@ -37,7 +37,7 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: ClusterIP
+  type: LoadBalancer
   port: 80
 
 ingress:
@@ -80,3 +80,172 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+config:
+  server:
+    type: tcp
+    port: ":8080"
+    stan:
+      cluster_id: "nats-streaming"
+      client_id: ""
+  telemetry:
+    trace:
+      enabled: true
+      ratio: 0.1
+      agent:
+        host: "127.0.0.1"
+        port: 6831
+    metric:
+      address: ":8080"
+      enabled: true
+
+jaeger:
+  container_name: "jaeger"
+  depends_on:
+    - app
+  image: jaegertracing/all-in-one:latest
+  ports:
+    - target: 6831
+      published: 6831
+      protocol: udp
+    - target: 16686
+      published: 16686
+      protocol: tcp
+    - target: 14268
+      published: 14268
+      protocol: tcp
+  networks:
+    - main
+
+  app:
+    container_name: "stan-ge-server"
+    build:
+      dockerfile: Dockerfile
+    depends_on:
+      - nats-streaming-1
+      - nats-streaming-2
+      - nats-streaming-3
+    networks:
+      - main
+
+  nats-streaming-1:
+    command:
+      - "--cluster"
+      - "nats://0.0.0.0:6222"
+      - "--cluster_id"
+      - nats-streaming
+      - "--clustered"
+      - "--cluster_bootstrap"
+      - "--cluster_log_path"
+      - /data/log
+      - "--cluster_node_id"
+      - nats-streaming-1
+      - "--cluster_raft_logging"
+      - "--debug"
+      - "--dir"
+      - /data/msg
+      - "--http_port"
+      - "8222"
+      - "--port"
+      - "4222"
+      - "--store"
+      - file
+      - "--stan_debug"
+      - "--hb_interval"
+      - 2s
+      - "--hb_fail_count"
+      - "1"
+      - "--hb_timeout"
+      - 5s
+    image: "nats-streaming:0.17.0"
+    networks:
+      - main
+    ports:
+      - "14222:4222"
+      - "18222:8222"
+    volumes:
+      - "./nats-streaming-1:/data"
+  nats-streaming-2:
+    command:
+      - "--cluster"
+      - "nats://0.0.0.0:6222"
+      - "--cluster_id"
+      - nats-streaming
+      - "--clustered"
+      - "--cluster_log_path"
+      - /data/log
+      - "--cluster_node_id"
+      - nats-streaming-2
+      - "--cluster_raft_logging"
+      - "--debug"
+      - "--dir"
+      - /data/msg
+      - "--http_port"
+      - "8222"
+      - "--port"
+      - "4222"
+      - "--store"
+      - file
+      - "--stan_debug"
+      - "--routes"
+      - "nats://nats-streaming-1:5222"
+      - "--hb_interval"
+      - 2s
+      - "--hb_fail_count"
+      - "1"
+      - "--hb_timeout"
+      - 5s
+    image: "nats-streaming:0.17.0"
+    networks:
+      - main
+    ports:
+      - "24222:4222"
+      - "28222:8222"
+    volumes:
+      - "./nats-streaming-2:/data"
+  nats-streaming-3:
+    command:
+      - "--cluster"
+      - "nats://0.0.0.0:6222"
+      - "--cluster_id"
+      - nats-streaming
+      - "--clustered"
+      - "--cluster_log_path"
+      - /data/log
+      - "--cluster_node_id"
+      - nats-streaming-3
+      - "--cluster_raft_logging"
+      - "--debug"
+      - "--dir"
+      - /data/msg
+      - "--http_port"
+      - "8222"
+      - "--port"
+      - "4222"
+      - "--store"
+      - file
+      - "--stan_debug"
+      - "--routes"
+      - "nats://nats-streaming-1:6222"
+      - "--hb_interval"
+      - 2s
+      - "--hb_fail_count"
+      - "1"
+      - "--hb_timeout"
+      - 5s
+    image: "nats-streaming:0.17.0"
+    networks:
+      - main
+    ports:
+      - "34222:4222"
+      - "38222:8222"
+    volumes:
+      - "./nats-streaming-3:/data"
+
+networks:
+  main:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 172.30.255.0/24
+      driver: default
